# ai-cup

./: .gitignore  README.md  conan_pred.json  evaluate.py  main.py  main_io.py  pyproject.toml  requirements.txt
Model/: gpt.py  qwen.py  qwen_gpt.py
Preprocess/: io.py
baseline/: bm25_retrieve.py
data/: io.py  preprocess.py  translate.py
debug_dataset/dataset/preliminary/: pred.json  questions_debug.json
models/: bm25_retrieve.py  cohere_retrieve.py  conan.py  constant.py  gpt.py  hybrid.py  qwen.py  qwen_gpt.py  rerank.py  reranker.py  zhinao.py  zpoint.py
preds/: cohere_pred.json  qwen_chunking_pred.json  qwen_gpt_chunking_pred.json  qwen_gpt_pred.json  qwen_pred.json  qwen_pred_2048.json  qwen_simp_pred.json
prelimiinary_data/: qwen_gpt_ins_no_num_pred.json  qwen_gpt_no_num_pred.json  qwen_gpt_pred.json  vanilla_qwen.json
