[tool.poetry]
name = "ai-cup"
version = "0.1.0"
description = ""
authors = ["energybubu <ivanhoward011878@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cohere = "^5.11.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
pdfplumber = "^0.11.4"
tqdm = "^4.66.5"
rank-bm25 = "^0.2.2"
jieba = "^0.42.1"
torch = "^2.5.0"
transformers = "^4.45.2"
sentence-transformers = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
